--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
     <artifactId>mysql-connector-j</artifactId>
     <version>9.5.0</version>
 </dependency>
+// chatgpt
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
+</dependency>
+
 
     </dependencies>
 
