--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,21 @@
             <scope>test</scope>
         </dependency>
 
-       
+       <!-- Mockito for unit testing -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>5.11.0</version>
+    <scope>test</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-junit-jupiter</artifactId>
+    <version>5.11.0</version>
+    <scope>test</scope>
+</dependency>
+
 
     </dependencies>
 
