--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,47 +1,23 @@
 spring.application.name=demo
 
-# ===============================
 # Server (DO NOT CHANGE PORT)
-# ===============================
 server.port=9001
+
+# HTTPS / Reverse proxy support
 server.forward-headers-strategy=framework
 
 # ===============================
-# Database (Your Existing Config)
+# DATABASE CONFIGURATION (MySQL)
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/dqm_db?createDatabaseIfNotExist=true
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dqm_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Amypo
 
 # ===============================
-# JPA / Hibernate
+# JPA / HIBERNATE CONFIGURATION
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# ===============================
-# JWT (REQUIRED FOR TESTS)
-# ===============================
-jwt.secret=ChangeThisSecretKeyReplaceMe1234567890
-jwt.validity=3600000
-
-# ===============================
-# Swagger / OpenAPI
-# ===============================
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.operationsSorter=method
-springdoc.swagger-ui.tagsSorter=alpha
-
-# ===============================
-# Disable security errors on swagger
-# ===============================
-springdoc.swagger-ui.disable-swagger-default-url=true
-
-# ===============================
-# Logging (optional but safe)
-# ===============================
-logging.level.org.springframework.security=ERROR
