--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,13 @@
 spring.application.name=demo
-
-# Server (DO NOT CHANGE PORT)
-server.port=9001
-
-# HTTPS / Reverse proxy support
-server.forward-headers-strategy=framework
-
-# ===============================
-# DATABASE CONFIGURATION (MySQL)
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/dqm_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Don't change the port
+server.port = 9001
+# for https
+server.forward-headers-strategy=framework 
+spring.datasource.url=jdbc:mysql://localhost:3306/sac?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
-
-# ===============================
-# JPA / HIBERNATE CONFIGURATION
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.api.database-platform=org.hibernate.dialect.MySQL8Dialect
